--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="https://github.com/astardefi/astardefi.github.io/blob/main/style.css">
 
 </head>
 
